@@ -1,5 +1,9 @@
 2008-06-25  Richard Guenther  <rguenther@suse.de>
 
+	* gcc.c-torture/compile/20080625-1.c: New testcase.
+
+2008-06-25  Richard Guenther  <rguenther@suse.de>
+
 	* g++.dg/torture/20080625-1.C: New testcase.
 
 2008-06-24  Eric Botcazou  <ebotcazou@adacore.com>
