@@ -1,5 +1,10 @@
 2008-06-25  Richard Guenther  <rguenther@suse.de>
 
+	* tree-ssa-structalias.c (fieldoff_compare): Make sure to
+	not overflow the result type.
+
+2008-06-25  Richard Guenther  <rguenther@suse.de>
+
 	* tree-vn.c (vn_add): Handle TRUTH_*_EXPR.
 	(vn_lookup): Likewise.
 
